<resources>
    <string name="app_name">Swoosh</string>
    <string name="wellcome_heading">GO ALL IN</string>
    <string name="welcome_sub_heading">ON GOING ALL OUT</string>
    <string name="welcome_description">Find a team in your city and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_screen_background">Welcome Screen Background</string>
    <string name="swoosh_logo">Swoosh Logo</string>
    <string name="next">NEXT</string>
    <string name="co_ed">Co-Ed</string>
    <string name="womens">Womens</string>
    <string name="mens">Mens</string>
    <string name="desired_league">Desired League</string>
    <string name="league_activity_background">League Activity Background</string>
    <string name="background_image">Background Image</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a Co-Ed beginner league near you.</string>
</resources>
